# twitter-deleter

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  dependency-licenses.txt  skaffold.yml
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  cronjob.yaml  pvc.yaml  secret.yaml  serviceaccount.yaml
chart/templates/tests/: test.yaml
k8s/: .gitignore  Makefile  argo.yml  cronjob.yml  kustomization.yml  secret-sealed.yml
k8s/base/: cronjob.yml  kustomization.yml  pvc.yml
k8s/example/: kustomization.yml
k8s/prod/: kustomization.yml  sealed-secret.yml
k8s/test/: kustomization.yml  sealed-secret.yml
src/: main.rs
values/: dev.yaml  prod.yaml
